PCPEXPORT = pcp.h \
            pcp/crypto.h \
            pcp/defines.h \
            pcp/digital_crc32.h \
            pcp/getpass.h \
            pcp/jenhash.h \
            pcp/key.h \
            pcp/mac.h \
            pcp/mem.h \
            pcp/pad.h \
            pcp/platform.h \
            pcp/randomart.h \
            pcp/uthash.h \
            pcp/vault.h \
            pcp/version.h \
            pcp/z85.h \
            pcp/zmq_z85.h

nobase_include_HEADERS = $(PCPEXPORT)
