PCPEXPORT = pcp.h \
            pcp/crypto.h \
            pcp/config.h \
            pcp/defines.h \
            pcp/digital_crc32.h \
            pcp/getpass.h \
            pcp/jenhash.h \
            pcp/key.h \
            pcp/keyhash.h \
            pcp/mac.h \
            pcp/mem.h \
            pcp/pad.h \
            pcp/platform.h \
            pcp/randomart.h \
            pcp/uthash.h \
            pcp/vault.h \
            pcp/version.h \
            pcp/z85.h \
            pcp/zmq_z85.h \
            pcp/ed.h \
	    pcp/base85.h \
            pcp/buffer.h \
            pcp/mgmt.h \
            pcp/pcpstream.h \
            pcp/keysig.h \
	    pcp/context.h \
	    pcp/structs.h \
	    pcp/util.h \
	    pcp/plist.h \
	    pcp/scrypt.h \
	    pcp/crypto_scrypt.h

nobase_include_HEADERS = $(PCPEXPORT)
