EXTRA_DIST = README crypto/crypto_aesctr.c crypto/crypto_aesctr.h crypto/crypto_scrypt-nosse.c crypto/crypto_scrypt-nosse.o crypto/crypto_scrypt-ref.c crypto/crypto_scrypt-sse.c crypto/crypto_scrypt.h crypto/scrypt_platform.h crypto/sha256.c crypto/sha256.h crypto/sha256.o scrypt_platform.h scryptenc/scryptenc.c scryptenc/scryptenc.h scryptenc/scryptenc_cpuperf.c scryptenc/scryptenc_cpuperf.h util/memlimit.c util/memlimit.h util/readpass.c util/readpass.h util/sysendian.h util/warn.c util/warn.h Makefile.am Makefile.in
